samples/_failures_safe/1761795038_3cf486_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77736336.c: In function ‘print_errors’:
./samples/SAFE/__tmp_77736336.c:141:5: error: expected declaration or statement at end of input
  141 |     for (int i = 0; i < analyzer->entry_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_77736336.c:141:5: error: expected declaration or statement at end of input
